formatting the code

--- a/join.html
+++ b/join.html
@@ -1,39 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!--Meta tags for search engins-->
-    <meta name="description" content="Healthy diet alternative for training" />
+    <meta name="description" content="Healthy diet alternative for training"/>
     <meta
       name="keywords"
-      content="vegan, vegan diet, nutrition, healthy nutrition, training, healthy lifestyle, stronger"
-    />
-    <meta name="author" content="Asya Haroyan" />
+      content="vegan, vegan diet, nutrition, healthy nutrition, training, healthy lifestyle, stronger"/>
+    <meta name="author" content="Asya Haroyan"/>
     <title>Stronger</title>
     <!--Favicon-->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="assets/favicon/apple-touch-icon.png"
-    />
+      href="assets/favicon/apple-touch-icon.png"/>
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/favicon/favicon-32x32.png"
-    />
+      href="assets/favicon/favicon-32x32.png"/>
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/favicon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="assets/favicon/site.webmanifest" />
+      href="assets/favicon/favicon-16x16.png"/>
+    <link rel="manifest" href="assets/favicon/site.webmanifest"/>
 
     <!--Stylesheet-->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css"/>
   </head>
 
   <body>
@@ -49,7 +45,7 @@
       <label for="nav-bar" class="nav-toggle-label">
         <i class="fa-solid fa-chevron-down"></i>
       </label>
-      <input type="checkbox" id="nav-bar" class="nav-toggle-bar" />
+      <input type="checkbox" id="nav-bar" class="nav-toggle-bar"/>
       <nav>
         <ul id="menu">
           <li><a href="index.html">Home</a></li>
@@ -79,10 +75,8 @@
           <form
             action="https://formdump.codeinstitute.net"
             method="post"
-            id="join-form"
-          >
+            id="join-form">
             <h2>Join us here! <i class="fa-solid fa-hand-point-down"></i></h2>
-
             <label for="first-name" class="join-label">First Name</label>
             <input
               type="text"
@@ -91,9 +85,8 @@
               class="text-input"
               placeholder="John"
               required
-              autofocus
-            />
-            <br />
+              autofocus/>
+            <br/>
             <label for="last-name" class="join-label">Last Name</label>
             <input
               type="text"
@@ -101,9 +94,8 @@
               id="last-name"
               class="text-input"
               placeholder="Smith"
-              required
-            />
-            <br />
+              required/>
+            <br/>
             <label for="email-address" class="join-label">Email Address</label>
             <input
               type="email"
@@ -111,17 +103,15 @@
               id="email-address"
               class="text-input"
               placeholder="js@gmail.com"
-              required
-            />
-            <br />
+              required/>
+            <br/>
             <label for="birth-date" class="join-label">Your Birthdate</label>
             <input
               type="date"
               name="birth-date"
               id="birth-date"
-              class="text-input"
-            />
-            <br />
+              class="text-input"/>
+            <br/>
             <div id="btn-container">
               <button type="submit" class="join-reset-btn" id="join-btn">
                 Join <i class="fa-solid fa-check"></i>
@@ -144,30 +134,24 @@
             href="https://www.facebook.com/"
             target="_blank"
             rel="noopener"
-            aria-label="visit our Facebook page"
-          >
-            <i class="fa-brands fa-facebook-f"></i
-          ></a>
+            aria-label="visit our Facebook page">
+            <i class="fa-brands fa-facebook-f"></i></a>
         </li>
         <li>
           <a
             href="https://www.instagram.com/"
             target="_blank"
             rel="noopener"
-            aria-label="visit our Instagram page"
-          >
-            <i class="fa-brands fa-instagram"></i
-          ></a>
+            aria-label="visit our Instagram page">
+            <i class="fa-brands fa-instagram"></i></a>
         </li>
         <li>
           <a
             href="https://www.tiktok.com/"
             target="_blank"
             rel="noopener"
-            aria-label="visit our Tiktok page"
-          >
-            <i class="fa-brands fa-tiktok"></i
-          ></a>
+            aria-label="visit our Tiktok page">
+            <i class="fa-brands fa-tiktok"></i></a>
         </li>
       </ul>
     </footer>
@@ -175,7 +159,6 @@
     <!--Font awesome kit-->
     <script
       src="https://kit.fontawesome.com/74774a4a16.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
   </body>
 </html>
