--- a/nutrition.html
+++ b/nutrition.html
@@ -1,39 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!--Meta tags for search engins-->
-    <meta name="description" content="Healthy diet alternative for training" />
+    <meta name="description" content="Healthy diet alternative for training"/>
     <meta
       name="keywords"
-      content="vegan, vegan diet, nutrition, healthy nutrition, training, healthy lifestyle, stronger"
-    />
-    <meta name="author" content="Asya Haroyan" />
+      content="vegan, vegan diet, nutrition, healthy nutrition, training, healthy lifestyle, stronger"/>
     <title>Stronger</title>
     <!--Favicon-->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="assets/favicon/apple-touch-icon.png"
-    />
+      href="assets/favicon/apple-touch-icon.png"/>
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/favicon/favicon-32x32.png"
-    />
+      href="assets/favicon/favicon-32x32.png"/>
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/favicon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="assets/favicon/site.webmanifest" />
+      href="assets/favicon/favicon-16x16.png"/>
+    <link rel="manifest" href="assets/favicon/site.webmanifest"/>
 
     <!--Stylesheet-->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css"/>
   </head>
 
   <body>
@@ -49,7 +44,7 @@
       <label for="nav-bar" class="nav-toggle-label">
         <i class="fa-solid fa-chevron-down"></i>
       </label>
-      <input type="checkbox" id="nav-bar" class="nav-toggle-bar" />
+      <input type="checkbox" id="nav-bar" class="nav-toggle-bar"/>
       <nav>
         <ul id="menu">
           <li><a href="index.html">Home</a></li>
@@ -70,8 +65,7 @@
             alt="An image of gladiator"
             class="fighter"
             id="gladiator"
-            title="Gladiator"
-          />
+            title="Gladiator"/>
           <p>
             Gladiatorial combat and training were very high-energy activities
             that required a lot of calories. The high-carb diets would provide
@@ -89,8 +83,7 @@
               target="_blank"
               rel="noopener"
               aria-label="visit the source page (opens in a new tab)"
-              >Short history</a
-            >
+              >Short history</a>
           </aside>
         </article>
 
@@ -112,8 +105,7 @@
                   src="assets/images/mike-tyson.webp"
                   alt="Image of Mike Tyson"
                   class="veg-athlete"
-                  title="Mike Tyson"
-                />
+                  title="Mike Tyson"/>
               </dt>
               <dd>
                 Michael Gerard Tyson (born June 30, 1966) is an American former
@@ -125,8 +117,7 @@
                   src="assets/images/tony-gonzalez.webp"
                   alt="Image of Tony Gonzalez"
                   class="veg-athlete"
-                  title="Tony Gonzalez"
-                />
+                  title="Tony Gonzalez"/>
               </dt>
               <dd>
                 Tony Gonzalez is American football tight end and actor, who
@@ -138,8 +129,7 @@
                   src="assets/images/david-haye.webp"
                   alt="Image of David Haye"
                   class="veg-athlete"
-                  title="David Haye"
-                />
+                  title="David Haye"/>
               </dt>
               <dd>
                 David Haye is a British boxer with world titles in two weight
@@ -152,8 +142,7 @@
                   src="assets/images/nate-diaz.webp"
                   alt="Image of Nate Diaz"
                   class="veg-athlete"
-                  title="Nate Diaz"
-                />
+                  title="Nate Diaz"/>
               </dt>
               <dd>
                 If Nate can wrestle and punch in a ring for 25 minutes and show
@@ -168,8 +157,7 @@
                   src="assets/images/heather-mills.webp"
                   alt="Image of Heather Mills"
                   class="veg-athlete"
-                  title="Heather Mills"
-                />
+                  title="Heather Mills"/>
               </dt>
               <dd>
                 Heather Mills is known as “the fastest disabled woman on the
@@ -181,8 +169,7 @@
                   src="assets/images/kendrick-farris.webp"
                   alt="Image of Kendrick Farris"
                   class="veg-athlete"
-                  title="Kendrick Farris"
-                />
+                  title="Kendrick Farris"/>
               </dt>
               <dd>
                 Farris is an American Olympic weightlifter and finished 11th in
@@ -195,8 +182,7 @@
                   src="assets/images/scott-jurek.webp"
                   alt="Image of Scott Jurek"
                   class="veg-athlete"
-                  title="Scott Jurek"
-                />
+                  title="Scott Jurek"/>
               </dt>
               <dd>
                 Scott Jurek is an American ultramarathon runner and one of the
@@ -209,8 +195,7 @@
                   src="assets/images/jermain-defoe.webp"
                   alt="Image of Jermain Defoe"
                   class="veg-athlete"
-                  title="Jermain Defoe"
-                />
+                  title="Jermain Defoe"/>
               </dt>
               <dd>
                 Famous for his insane goal scoring rate of over 150 Premier
@@ -218,7 +203,7 @@
               </dd>
             </dl>
           </div>
-          <br />
+          <br/>
           <aside class="source">
             Sources:
             <a
@@ -226,16 +211,14 @@
               target="_blank"
               rel="noopener"
               aria-label="visit the Pledgesports page (opens in a new tab)"
-              >Pledgesports</a
-            >
+              >Pledgesports</a>
             and
             <a
               href="https://www.ranker.com/list/athletes-who-are-vegan/people-in-sports"
               target="_blank"
               rel="noopener"
               aria-label="visit the Ranker page (opens in a new tab)"
-              >Ranker</a
-            >
+              >Ranker</a>
           </aside>
         </article>
       </section>
@@ -251,7 +234,7 @@
             antioxidants while animal proteins tend to be higher in fat and
             cholesterol.
           </p>
-          <br />
+          <br/>
           <h3>Do you want to know more? Check the documentary here!</h3>
           <div id="movie-buttom">
             <a href="#movie">Watch the movie!</a>
@@ -263,46 +246,33 @@
           <caption>
             Nutrition
           </caption>
-
           <tr>
             <th>Beef <i class="fa-solid fa-cow"></i></th>
             <th>Beans <i class="fa-solid fa-leaf"></i></th>
           </tr>
           <tr>
             <td><i class="fa-solid fa-check"></i>Protein: 22g</td>
-            <!-- Beef -->
             <td><i class="fa-solid fa-check"></i>Protein: 22g</td>
-            <!-- Beans -->
           </tr>
           <tr>
-            <td><i class="fa-solid fa-xmark"></i>Saturated fat: 12g</td>
-            <!-- Beef -->
-            <td><i class="fa-solid fa-check"></i>Saturated fat: 0g</td>
-            <!-- Beans -->
+            <td><i class="fa-solid fa-xmark"></i>Saturated fat: 12g</td> 
+            <td><i class="fa-solid fa-check"></i>Saturated fat: 0g</td> 
           </tr>
           <tr>
             <td><i class="fa-solid fa-xmark"></i>Fiber: 0g</td>
-            <!-- Beef -->
             <td><i class="fa-solid fa-check"></i>Fiber: 15g</td>
-            <!-- Beans -->
           </tr>
           <tr>
             <td><i class="fa-solid fa-xmark"></i>Calcium: 16mg</td>
-            <!-- Beef -->
             <td><i class="fa-solid fa-check"></i>Calcium: 123mg</td>
-            <!-- Beans -->
           </tr>
           <tr>
             <td><i class="fa-solid fa-xmark"></i>Iron: 1.9mg</td>
-            <!-- Beef -->
             <td><i class="fa-solid fa-check"></i>Iron: 5mg</td>
-            <!-- Beans -->
           </tr>
           <tr>
             <td><i class="fa-solid fa-xmark"></i>Iron: 74mg</td>
-            <!-- Beef -->
             <td><i class="fa-solid fa-check"></i>Cholesterol: 0mg</td>
-            <!-- Beans -->
           </tr>
         </table>
       </section>
@@ -320,7 +290,7 @@
               horrific ways in which animals are killed for food? Are we really
               supposed to eat meat?
             </p>
-            <br />
+            <br/>
             <h3>We Don’t Have Carnivorous Teeth</h3>
 
             <p>
@@ -335,7 +305,7 @@
               large canine teeth, and we wouldn’t have been able to deal with
               food sources that required those large canines.”
             </p>
-            <br />
+            <br/>
             <h3>Our Digestive System Doesn’t Like Meat</h3>
             <p>
               Carnivores have short intestinal tracts that allow meat to pass
@@ -345,7 +315,7 @@
               plant-based foods.
             </p>
           </div>
-          <br />
+          <br/>
           <div class="container">
             <h3>Meat Can Cause Heart Disease in Humans</h3>
             <p>
@@ -358,7 +328,7 @@
               have a 32 percent higher risk of developing heart disease than
               vegetarians?
             </p>
-            <br />
+            <br/>
             <p>
               Numerous studies have shown that meat is not ideal for the human
               body and may actually be making us sick and killing us. The human
@@ -366,7 +336,7 @@
               fiber, antioxidants, unsaturated fat, essential fatty acids,
               phytochemicals, and cholesterol-free protein.
             </p>
-            <br />
+            <br/>
             <h3>Dietary Factors</h3>
             <p>
               The Western diet is notorious for including a lot of high-fat
@@ -375,23 +345,20 @@
               hormones that stimulate production of more sebaceous follicles,
               which can block pores and cause acne.
             </p>
-            <br />
+            <br/>
             <aside class="source">
               Sources:
               <a
                 href="https://www.peta.org/features/are-humans-supposed-to-eat-meat/"
                 target="_blank"
                 rel="noopener"
-                aria-label="visit the source page (opens in a new tab)"
-                >PETA </a
-              >and
+                aria-label="visit the source page (opens in a new tab)">PETA </a>and
               <a
                 href="https://www.cleaneatingmag.com/clean-diet/5-foods-to-avoid-if-youre-worried-about-acne/?fbclid=IwAR1qk0p0AYYmYj_PoCNwOsNHP9KHFjAJFRjK158gn28RZ2oC_Xl0nsF7G2U"
                 target="_blank"
                 rel="noopener"
                 aria-label="visit the source page (opens in a new tab)"
-                >Outside</a
-              >.
+                >Outside</a>.
             </aside>
           </div>
         </article>
@@ -406,8 +373,7 @@
             src="https://www.youtube.com/embed/rTGM2KjNGUU"
             title="The Game Changer | Netflix full movie 2019 | The Game Changers Full Movie In Hindi #thegamechanger"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
+            allowfullscreen></iframe>
         </div>
       </section>
     </main>
@@ -421,18 +387,15 @@
             href="https://www.facebook.com/"
             target="_blank"
             rel="noopener"
-            aria-label="visit our Facebook page"
-          >
-            <i class="fa-brands fa-facebook-f"></i
-          ></a>
+            aria-label="visit our Facebook page">
+            <i class="fa-brands fa-facebook-f"></i></a>
         </li>
         <li>
           <a
             href="https://www.instagram.com/"
             target="_blank"
             rel="noopener"
-            aria-label="visit our Instagram page"
-          >
+            aria-label="visit our Instagram page">
             <i class="fa-brands fa-instagram"></i
           ></a>
         </li>
@@ -441,10 +404,8 @@
             href="https://www.tiktok.com/"
             target="_blank"
             rel="noopener"
-            aria-label="visit our Tiktok page"
-          >
-            <i class="fa-brands fa-tiktok"></i
-          ></a>
+            aria-label="visit our Tiktok page">
+            <i class="fa-brands fa-tiktok"></i></a>
         </li>
       </ul>
     </footer>
@@ -452,7 +413,6 @@
     <!--Font awesome kit-->
     <script
       src="https://kit.fontawesome.com/74774a4a16.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
   </body>
 </html>
